[gd_scene load_steps=17 format=3 uid="uid://c2fkt0wr8b88k"]

[ext_resource type="Script" path="res://Scenes/Levels/piano/recordbutton.gd" id="1_d5l1r"]
[ext_resource type="Texture2D" uid="uid://dfrqeu2s0re5x" path="res://Assets/Sprites/pianoworld/playing butt.png" id="2_3iq20"]
[ext_resource type="Texture2D" uid="uid://dcxfuxilllp14" path="res://Assets/Sprites/pianoworld/play butt.png" id="3_w68j3"]
[ext_resource type="Texture2D" uid="uid://d0iqv1yxk3euu" path="res://Assets/Sprites/pianoworld/e butt.png" id="4_c3lkd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xa7qn"]
radius = 29.0039
height = 70.0077

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ggwcv"]
radius = 14.9999
height = 47.9998

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arcw5"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_033gl"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikf5m"]
size = Vector2(30, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n75lc"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkugs"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qfir"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12pr4"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ideb1"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_scmvt"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu12f"]
size = Vector2(30.5, 74.5)

[node name="recordbutton" type="Area2D"]
script = ExtResource("1_d5l1r")

[node name="areacollide" type="CollisionShape2D" parent="."]
position = Vector2(328, 208)
rotation = -1.57496
shape = SubResource("CapsuleShape2D_xa7qn")

[node name="button" type="StaticBody2D" parent="."]
position = Vector2(328, 208)

[node name="recording" type="Sprite2D" parent="button"]
position = Vector2(0, -8)
scale = Vector2(0.476562, 0.476562)
texture = ExtResource("2_3iq20")

[node name="notrecording" type="Sprite2D" parent="button"]
position = Vector2(0, -8)
scale = Vector2(0.476562, 0.476562)
texture = ExtResource("3_w68j3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="button"]
position = Vector2(0, -2)
rotation = 1.56804
shape = SubResource("CapsuleShape2D_ggwcv")

[node name="e" type="Sprite2D" parent="."]
position = Vector2(324, 180)
scale = Vector2(0.448872, 0.448872)
texture = ExtResource("4_c3lkd")

[node name="tiles" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="f3" type="Area2D" parent="tiles"]

[node name="f3" type="CollisionShape2D" parent="tiles/f3"]
position = Vector2(52, 68)
shape = SubResource("RectangleShape2D_arcw5")

[node name="g3" type="Area2D" parent="tiles"]

[node name="g3" type="CollisionShape2D" parent="tiles/g3"]
position = Vector2(100, 68)
shape = SubResource("RectangleShape2D_033gl")

[node name="a4" type="Area2D" parent="tiles"]

[node name="a4" type="CollisionShape2D" parent="tiles/a4"]
position = Vector2(148, 68)
shape = SubResource("RectangleShape2D_ikf5m")

[node name="b4" type="Area2D" parent="tiles"]

[node name="b4" type="CollisionShape2D" parent="tiles/b4"]
position = Vector2(180, 68)
shape = SubResource("RectangleShape2D_n75lc")

[node name="c4" type="Area2D" parent="tiles"]

[node name="c4" type="CollisionShape2D" parent="tiles/c4"]
position = Vector2(228, 68)
shape = SubResource("RectangleShape2D_jkugs")

[node name="d4" type="Area2D" parent="tiles"]

[node name="d4" type="CollisionShape2D" parent="tiles/d4"]
position = Vector2(276, 68)
shape = SubResource("RectangleShape2D_8qfir")

[node name="e4" type="Area2D" parent="tiles"]

[node name="e4" type="CollisionShape2D" parent="tiles/e4"]
position = Vector2(308, 68)
shape = SubResource("RectangleShape2D_12pr4")

[node name="f4" type="Area2D" parent="tiles"]

[node name="f4" type="CollisionShape2D" parent="tiles/f4"]
position = Vector2(340, 68)
shape = SubResource("RectangleShape2D_ideb1")

[node name="g4" type="Area2D" parent="tiles"]

[node name="g4" type="CollisionShape2D" parent="tiles/g4"]
position = Vector2(388, 68)
shape = SubResource("RectangleShape2D_scmvt")

[node name="a5" type="Area2D" parent="tiles"]

[node name="a5" type="CollisionShape2D" parent="tiles/a5"]
position = Vector2(420, 68)
shape = SubResource("RectangleShape2D_wu12f")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="body_shape_entered" from="tiles/f3" to="." method="_on_f_3_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/g3" to="." method="_on_g_3_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/a4" to="." method="_on_a_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/b4" to="." method="_on_b_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/c4" to="." method="_on_c_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/d4" to="." method="_on_d_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/e4" to="." method="_on_e_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/f4" to="." method="_on_f_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/g4" to="." method="_on_g_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/a5" to="." method="_on_a_5_body_shape_entered"]
